--- a/assets/css/frontpage.css
+++ b/assets/css/frontpage.css
@@ -7,7 +7,7 @@
 
 .home-info {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  background: #C1C8E4;
+  background: #C4D0FF;
   padding: 15px 15px;
 }
 
